@@ -2,4 +2,10 @@ ALERT: This script SHOULD be run because it has both 'for=window' and 'event=onl
 ALERT: This script SHOULD be run because it has both 'for=window' and 'event=onload()'.
 ALERT: This script SHOULD be run because it only has a for attribute.
 ALERT: This script SHOULD be run because it only has an event attribute.
+ALERT: This script SHOULD be run because it has both 'for=   window   ' and 'event=onload()' and the whitespace should be irrelevant.
+ALERT: This script SHOULD be run because it has both 'for=window' and 'event=   onload()   ' and the whitespace should be irrelevant.
+ALERT: This script SHOULD be run because it has both 'for=   window   ' and 'event=   onload()   ' and the whitespace should be irrelevant.
+ALERT: This script SHOULD be run because it has both 'for=   window   ' and 'event=onload' and the whitespace should be irrelevant.
+ALERT: This script SHOULD be run because it has both 'for=window' and 'event=   onload   ' and the whitespace should be irrelevant.
+ALERT: This script SHOULD be run because it has both 'for=   window   ' and 'event=   onload   ' and the whitespace should be irrelevant.
 
