@@ -1,3 +1,13 @@
+2010-03-02  Brady Eidson  <beidson@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        Followup for REGRESSION(r51097) - Unable to log in to statefarm.com
+        <rdar://problem/7672667> and https://bugs.webkit.org/show_bug.cgi?id=35556
+
+        * fast/loader/for-window-event-onload-scripts-expected.txt:
+        * fast/loader/for-window-event-onload-scripts.html:
+
 2010-03-02  Chris Fleizach  <cfleizach@apple.com>
 
         Reviewed by Beth Dakin.
